syntax = "proto3";
package cdriver;

import "google/protobuf/empty.proto";


service CDriver {
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
    rpc CreateDataSource(ConnectionInfo) returns (DataSourceAccessToken);
    rpc GetDataSource(DataSourceAccessToken) returns (DataSourceInfo);
    rpc ListDataSources(google.protobuf.Empty) returns (stream DataSourceInfo);
    rpc ExecuteCommand(Command) returns (google.protobuf.Empty);
}

message HealthCheckResponse {
    bool living = 1;
}

message DataSourceInfo {
    string name = 1;
    string host = 2;
    string port = 3;
    string user = 4;
}

message ConnectionInfo {
    string driver = 1;
    string host = 2;
    uint64 port = 3;
    string user = 4;
    string password = 5;
    string database = 6;
    string application_name = 7;
}

message DataSourceAccessToken {
    string name = 1;
    uint64 token = 2;  
}

message Command {
    string name = 1;
    uint64 token = 2;
    string query = 3;
}
